#849 Avanço nos filtros da tela de consulta de produção
Inclui ajustes nos controles para melhor exibição nos filtros.

--- a/Glass/Style/Geral.css
+++ b/Glass/Style/Geral.css
@@ -31,7 +31,8 @@ input, button, textarea, select, .ui-dropdownchecklist-text {
 }
 
 .ui-dropdownchecklist-text {
-  line-height: 19px;
+  line-height: 19px !important;
+  height: 19px !important;
 }
 
 body {
