--- a/Glass/Vue/_Compartilhado/Templates/Base/ControleTooltip.html
+++ b/Glass/Vue/_Compartilhado/Templates/Base/ControleTooltip.html
@@ -5,9 +5,9 @@
         </slot>
     </span>
     <transition name="fade" v-on:enter="calcularPosicao__" v-on:after-enter="mostrar__" v-on:before-leave="esconder__">
-        <div v-bind:style="estiloPopup" v-if="exibir">
+        <div ref="popup" v-bind:style="estiloPopup" v-show="exibir">
             <div v-if="titulo || precisaClicar" v-bind:style="estiloTitulo">
-                <span style="color: white; position: relative; top: 1px; white-space: nowrap" v-if="titulo">
+                <span style="color: white; white-space: nowrap; text-align: left; font-size: 8pt" v-if="titulo">
                     {{ titulo }}
                 </span>
                 <span v-else></span>
