#850 Finalização do controle de beneficiamentos por setor

--- a/Glass/Vue/Producao/Templates/LstProducao.Filtros.html
+++ b/Glass/Vue/Producao/Templates/LstProducao.Filtros.html
@@ -97,7 +97,8 @@
     <div>
         <span class="form-group">
             <label for="beneficiamentos">Beneficiamentos</label>
-            <controle-tooltip id="beneficiamentos" v-bind:precisa-clicar="true" titulo="Beneficiamentos">
+            <controle-tooltip id="beneficiamentos" v-bind:precisa-clicar="true" titulo="Beneficiamentos"
+                style="height: 21px; display: inline-block; vertical-align: middle">
                 <template slot="botao">
                     <img src="../../Images/gear_add.gif" />
                 </template>
