#1044 Início da separação de mixin de ordenação de listas

--- a/Glass/Style/Geral.css
+++ b/Glass/Style/Geral.css
@@ -388,6 +388,10 @@ section {
       top: 3px;
     }
 
+    div.filtros span > input[type="checkbox"] + label, section.filtros span > input[type="checkbox"] + label {
+      color: initial;
+    }
+
     div.filtros .botaoPesquisar, section.filtros .botaoPesquisar {
       position: relative;
       top: 2px;
