--- a/Glass/Vue/_Compartilhado/Templates/Base/ListaSelecao.html
+++ b/Glass/Vue/_Compartilhado/Templates/Base/ListaSelecao.html
@@ -1,5 +1,5 @@
 ﻿<select v-model="idAtual" v-on:change.prevent="alterarSelecao">
-    <option value="">
+    <option value="" v-if="incluirItemVazio">
         {{ this.textoSelecionar }}
     </option>
     <slot v-for="item in itens" v-bind:item="item">
