--- a/Glass/Vue/_Compartilhado/Templates/Base/ListaSelecaoIdValor.html
+++ b/Glass/Vue/_Compartilhado/Templates/Base/ListaSelecaoIdValor.html
@@ -1,6 +1,6 @@
 ﻿<lista-selecao v-bind:item-selecionado.sync="itemSelecionadoAtual" v-bind:texto-selecionar="textoSelecionar"
     v-bind:funcao-recuperar-itens="funcaoRecuperarItens" v-bind:filtro-recuperar-itens="filtroRecuperarItens"
-    v-bind:ordenar="ordenar" v-bind:campo-id="campoId">
+    v-bind:ordenar="ordenar" v-bind:campo-id="campoId" v-bind:incluir-item-vazio="incluirItemVazio">
     <template slot-scope="{ item }">
         <option v-bind:value="item[campoId]">
             {{ item[campoValor] }}
