--- a/Glass/Vue/_Compartilhado/Templates/Base/ListaPaginada.html
+++ b/Glass/Vue/_Compartilhado/Templates/Base/ListaPaginada.html
@@ -1,7 +1,7 @@
 ﻿<span>
     <div v-if="bloqueio">
         <span v-bind:style="processamento">
-            <img src="../Images/Load.gif" height="16px" />
+            <img src="/Images/Load.gif" height="16px" />
             Aguarde...
         </span>
     </div>
